# fitna

./: CMakeLists.txt  Cluster.cpp  DataPool.cpp  Procfile  requirements.txt  setup.py
binder/: fitna  fitna.ipynb  requirements.txt
fitna/: __init__.py  data.py  em.py  plotly.py
js/: data.js  potential.css  potential.html  potential.js
src/: Cluster.h  DataPool.h  clust.cc
web-app/: test_fitna.py
web-apps/: fitna-app.py
